[gd_scene load_steps=2 format=3 uid="uid://main_menu_001"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 64
font_color = Color(0, 1, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "SHAPE SHIFT"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Merge • Evolve • React"
horizontal_alignment = 1
modulate = Color(1, 0, 1, 1)

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(350, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "PLAY"

[node name="HowToPlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(350, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "HOW TO PLAY"

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "High Score: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(350, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "QUIT"
